// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="Axelさんのプロフィールと、全投稿を確認することができます。"
    title="Axelさんの投稿一覧"
  />
  <ForwardRef(Stack)
    alignItems="center"
    direction="row"
    justifyContent="center"
    spacing={1}
    sx={
      Object {
        "mb": 3,
      }
    }
  >
    <ForwardRef(Avatar)
      src="https://xxx/xxx.jpg"
      sx={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    />
    <ForwardRef(Typography)
      component="h2"
      variant="h4"
    >
      Axelさん
    </ForwardRef(Typography)>
  </ForwardRef(Stack)>
  <IconAndText
    align="center"
    href="https://..."
    iconComponent={<Memo />}
    iconPosition="left"
    text="https://..."
  />
  <ForwardRef(Divider)
    sx={
      Object {
        "my": 3,
      }
    }
  />
  <ForwardRef(Typography)
    align="center"
    component="h3"
    variant="h4"
  >
    投稿一覧
  </ForwardRef(Typography)>
  <MapLinkButton
    userId={1}
  />
  <ArticlePreviewList
    doesKeepPageParamInUrl={true}
    searchConditions={
      Object {
        "user": 1,
      }
    }
    variant="large"
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests no icon 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="Axelさんのプロフィールと、全投稿を確認することができます。"
    title="Axelさんの投稿一覧"
  />
  <ForwardRef(Stack)
    alignItems="center"
    direction="row"
    justifyContent="center"
    spacing={1}
    sx={
      Object {
        "mb": 3,
      }
    }
  >
    <ForwardRef(Avatar)
      src="no-icon.jpg"
      sx={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    />
    <ForwardRef(Typography)
      component="h2"
      variant="h4"
    >
      Axelさん
    </ForwardRef(Typography)>
  </ForwardRef(Stack)>
  <ForwardRef(Divider)
    sx={
      Object {
        "my": 3,
      }
    }
  />
  <ForwardRef(Typography)
    align="center"
    component="h3"
    variant="h4"
  >
    投稿一覧
  </ForwardRef(Typography)>
  <MapLinkButton
    userId={1}
  />
  <ArticlePreviewList
    doesKeepPageParamInUrl={true}
    searchConditions={
      Object {
        "user": 1,
      }
    }
    variant="large"
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests twitter url 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="Axelさんのプロフィールと、全投稿を確認することができます。"
    title="Axelさんの投稿一覧"
  />
  <ForwardRef(Stack)
    alignItems="center"
    direction="row"
    justifyContent="center"
    spacing={1}
    sx={
      Object {
        "mb": 3,
      }
    }
  >
    <ForwardRef(Avatar)
      src="https://xxx/xxx.jpg"
      sx={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    />
    <ForwardRef(Typography)
      component="h2"
      variant="h4"
    >
      Axelさん
    </ForwardRef(Typography)>
  </ForwardRef(Stack)>
  <IconAndText
    align="center"
    href="https://twitter.com/..."
    iconComponent={<Memo />}
    iconPosition="left"
    text="https://twitter.com/..."
  />
  <ForwardRef(Divider)
    sx={
      Object {
        "my": 3,
      }
    }
  />
  <ForwardRef(Typography)
    align="center"
    component="h3"
    variant="h4"
  >
    投稿一覧
  </ForwardRef(Typography)>
  <MapLinkButton
    userId={1}
  />
  <ArticlePreviewList
    doesKeepPageParamInUrl={true}
    searchConditions={
      Object {
        "user": 1,
      }
    }
    variant="large"
  />
</ArticleWrapper>
`;
